--- a/TrabajoFInalhito22.vcxproj.filters
+++ b/TrabajoFInalhito22.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Listas.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Database.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
