--- a/TrabajoFInalhito22.vcxproj
+++ b/TrabajoFInalhito22.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Arbol.h" />
     <ClInclude Include="Database.h" />
+    <ClInclude Include="Entidad.h" />
     <ClInclude Include="Listas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
