--- a/TrabajoFInalhito22.vcxproj.filters
+++ b/TrabajoFInalhito22.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Database.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Entidad.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
